@@ -1,1 +1,6 @@
-Weston Schmidt <weston_schmidt@yahoo.com>
+Original Author:
+    - Weston Schmidt <weston_schmidt@yahoo.com>
+
+Contributors:
+    - Reinhard Arlt
+        - at89c5131 chip support
